website/versioned_docs/version-1.10.x/components/data-accelerators/index.md
---
title: 'Data Accelerators'
sidebar_label: 'Data Accelerators'
description: ''
image: /img/og/data-accelerators.png
sidebar_position: 2
pagination_prev: null
pagination_next: null
---

Data sourced by Data Connectors can be locally materialized and accelerated using a Data Accelerator.

A Data Accelerator will query/fetch data from a connected data source and store/update it locally in an embedded acceleration engine, such as DuckDB or SQLite. To set data refresh behavior, such as refreshing data on an interval see [Data Refresh](/docs/features/data-acceleration/data-refresh).

Dataset acceleration is enabled by setting the acceleration configuration. E.g.

```yaml
datasets:
  - name: accelerated_dataset
    acceleration:
      enabled: true
```

For the complete reference specification, see [datasets](/docs/reference/spicepod/datasets).

By default, datasets will be locally materialized using in-memory Arrow records.

A choice of DuckDB, SQLite, or PostgreSQL engines can be used to materialize data, in-memory, on disk, or in attached databases.

Supported Data Accelerators include:

| Name       | Description                     | Status               | Engine Modes     |
| ---------- | ------------------------------- | -------------------- | ---------------- |
| `arrow`    | In-Memory Arrow Records         | Stable               | `memory`         |
| `cayenne`  | [Cayenne][cayenne]              | Alpha (v1.9.0-rc.1+) | `file`, `file_create`, `file_update` |
| `duckdb`   | Embedded [DuckDB][duckdb]       | Stable               | `memory`, `file`, `file_create` |
| `postgres` | Attached [PostgreSQL][postgres] | Release Candidate    | N/A              |
| `sqlite`   | Embedded [SQLite][sqlite]       | Release Candidate    | `memory`, `file`, `file_create` |

[cayenne]: /docs/components/data-accelerators/cayenne
[duckdb]: /docs/components/data-accelerators/duckdb
[postgres]: /docs/components/data-accelerators/postgres
[sqlite]: /docs/components/data-accelerators/sqlite

## Choosing an Accelerator

Select the appropriate accelerator based on dataset size, query patterns, and resource constraints:

| Use Case                                            | Recommended Accelerator | Rationale                                               |
| --------------------------------------------------- | ----------------------- | ------------------------------------------------------- |
| Small datasets (under 1 GB), maximum speed          | `arrow`                 | In-memory storage provides lowest latency               |
| Medium datasets (1-100 GB), complex SQL             | `duckdb`                | Mature SQL support with memory management               |
| Large datasets (100 GB - 1+ TB), scalable analytics | `cayenne`               | Vortex columnar format scales beyond single-file limits |
| Point lookups on large datasets                     | `cayenne`               | Vortex provides 100x faster random access vs Parquet    |
| Simple queries, low resource usage                  | `sqlite`                | Lightweight, minimal overhead                           |
| External database integration                       | `postgres`              | Leverage existing PostgreSQL infrastructure             |

### Spice Cayenne vs DuckDB

Both [Spice Cayenne](/docs/components/data-accelerators/cayenne) and [DuckDB](/docs/components/data-accelerators/duckdb) support file-based acceleration, but differ in architecture and performance characteristics:

**Choose Spice Cayenne when:**

- Datasets exceed ~1 TB
- Multi-file data ingestion is required (e.g., partitioned S3 data)
- Lower memory overhead is preferred
- Workloads benefit from Vortex's [10-20x faster scans](https://bench.vortex.dev)
- Point lookups and random access patterns are common ([100x faster than Parquet](https://bench.vortex.dev))

**Choose DuckDB when:**

- Datasets are under ~1 TB
- Complex SQL features are required (window functions, CTEs)
- Existing DuckDB tooling integration is beneficial
- Explicit index control is required

## Data Types

Data Accelerators may not support all possible Apache Arrow data types. For complete compatibility, see [specifications](/docs/reference/datatypes/accelerators).

:::warning[Memory Considerations]

When accelerating a dataset using `mode: memory` (the default), some or all of the dataset is loaded into memory. Ensure sufficient memory is available, including overhead for queries and the runtime, especially with concurrent queries.

In-memory limitations can be mitigated by storing acceleration data on disk, which is supported by [`duckdb`](/docs/components/data-accelerators/duckdb) and [`sqlite`](/docs/components/data-accelerators/sqlite) accelerators by specifying `mode: file`.

:::

## Data Accelerator Docs

import DocCardList from '@theme/DocCardList';

<DocCardList />

## Related Documentation

- [Managing Memory Usage](/docs/reference/memory) - Memory configuration reference
- [Data Refresh](/docs/features/data-acceleration/data-refresh) - Refresh mode configuration
- [Indexes](/docs/features/data-acceleration/indexes) - Index configuration for DuckDB and SQLite
